[project]
name = "marcopgbu-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Perez",email = "marcopg@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "marcopgbu"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
