[project]
name = "marcopgbu-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Perez",email = "marcopg@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "marcopgbu"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
